--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,30 @@
 body{
     background-color: orange;
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
 }
 
-img{
-    height:100vh;
+#myimage{
+    height: 50vw;
+    max-height:80vh;
+    
+}
+
+.mainchilddiv{
+    width: 50%;
+    text-align: center;
+}
+
+#homediv{
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+}
+
+#desc{
+    padding:30px;
+    text-align: left;
+    color: white;
 }
