completed the content of hompage and changed the overall struture of the directory

--- a/css/main.css
+++ b/css/main.css
@@ -42,4 +42,11 @@ body{
     z-index: 10;
 }
 
+#skillSetList{
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 
