day#2 corrected the underline thingy

--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,18 @@ body{
 }
 
 .underline {
-    
     width: 100%;
     border-bottom: 2px solid white;
+    display: table-cell;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    bottom: 3px;
+}
+
+.underlinetxt{
+    display: table-cell;
+    width: auto;
 }
 
 
